[package]
name = "v8-example"
version = "0.1.0"
authors = ["Ryan P. Brewster <RyanPBrewster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
env_logger = "0.7"
log = "0.4"
rusty_v8 = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
